test/e2e/testdata/direct-response.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-response
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /inline
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: direct-response-inline
  - matches:
    - path:
        type: PathPrefix
        value: /value-ref
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: direct-response-value-ref
  - matches:
    - path:
        type: PathPrefix
        value: /401
    filters:
    - type: ExtensionRef
      extensionRef:
        group: gateway.envoyproxy.io
        kind: HTTPRouteFilter
        name: direct-response-status

---
apiVersion: v1
kind: ConfigMap
metadata:
  name: value-ref-response
  namespace: gateway-conformance-infra
data:
  response.body: '{"error": "Internal Server Error"}'
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: direct-response-inline
  namespace: gateway-conformance-infra
spec:
  directResponse:
    contentType: text/plain
    body:
      type: Inline
      inline: "%REQ(:METHOD)% Oops! Your request is not found."
    header:
      add:
      - name: X-Add-Header
        value: "added-value"
      - name: X-Response-Type
        value: "direct"
      set:
      - name: X-Set-Header
        value: "set-value"
      - name: Cache-Control
        value: "no-cache"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: direct-response-value-ref
  namespace: gateway-conformance-infra
spec:
  directResponse:
    contentType: application/json
    body:
      type: ValueRef
      valueRef:
        group: ""
        kind: ConfigMap
        name: value-ref-response
    header:
      add:
      - name: X-Add-Header
        value: "added-json"
      set:
      - name: X-Set-Header
        value: "set-json"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: direct-response-status
  namespace: gateway-conformance-infra
spec:
  directResponse:
    statusCode: 401
    header:
      add:
      - name: X-Add-Header
        value: "added-401"
      set:
      - name: X-Set-Header
        value: "set-401"
